--- a/raw/.classpath
+++ b/raw/.classpath
@@ -28,7 +28,7 @@
 	<classpathentry kind="lib" path="lib/argo-3.7.jar"/>
 	<classpathentry kind="lib" path="lib/asm-all-4.1-sources.jar"/>
 	<classpathentry kind="lib" path="lib/asm-all-4.1.jar" sourcepath="lib/asm-all-4.1-sources.jar"/>
-	<classpathentry kind="lib" path="lib/Minecraft-server-version.jar"/>
-	<classpathentry kind="lib" path="lib/Minecraft-version.jar"/>
+	<classpathentry kind="lib" path="lib/Minecraft-server-versioned.jar"/>
+	<classpathentry kind="lib" path="lib/Minecraft-versioned.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
