--- a/raw/.classpath
+++ b/raw/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="libraries/java3d/vecmath/1.3.1/vecmath-1.3.1.jar"/>
 	<classpathentry kind="lib" path="libraries/net/sf/trove4j/trove4j/3.0.3/trove4j-3.0.3.jar"/>
@@ -26,10 +27,6 @@
 	<classpathentry kind="lib" path="libraries/org/lwjgl/lwjgl/lwjgl-platform/2.9.0/lwjgl-platform-2.9.0-natives-linux.jar"/>
 	<classpathentry kind="lib" path="libraries/net/java/jinput/jinput-platform/2.0.5/jinput-platform-2.0.5-natives-linux.jar"/>
 	<classpathentry kind="lib" path="libraries/tv/twitch/twitch/5.12/twitch-5.12.jar"/>
-	<!--
-    <classpathentry kind="lib" path="libraries/tv/twitch/twitch-platform/5.12/twitch-platform-5.12-natives-linux.jar"/>
-    <classpathentry kind="lib" path="libraries/tv/twitch/twitch-external-platform/4.5/twitch-external-platform-4.5-natives-linux.jar"/>
-    -->
 	<classpathentry kind="lib" path="lib/argo-3.7.jar"/>
 	<classpathentry kind="lib" path="lib/asm-all-4.1-sources.jar"/>
 	<classpathentry kind="lib" path="lib/asm-all-4.1.jar" sourcepath="lib/asm-all-4.1-sources.jar"/>
