--- a/raw/.classpath
+++ b/raw/.classpath
@@ -19,18 +19,18 @@
 	<classpathentry kind="lib" path="libraries/net/java/jinput/jinput/2.0.5/jinput-2.0.5.jar"/>
 	<classpathentry kind="lib" path="libraries/net/java/jutils/jutils/1.0.0/jutils-1.0.0.jar"/>
 	<classpathentry kind="lib" path="libraries/com/google/code/gson/gson/2.2.4/gson-2.2.4.jar"/>
-	<classpathentry kind="lib" path="libraries/com/mojang/authlib/1.2/authlib-1.2.jar"/>
+	<classpathentry kind="lib" path="libraries/com/mojang/authlib/1.5.12/authlib-1.5.12.jar"/>
 	<classpathentry kind="lib" path="libraries/org/apache/logging/log4j/log4j-api/2.0-beta9/log4j-api-2.0-beta9.jar"/>
 	<classpathentry kind="lib" path="libraries/org/apache/logging/log4j/log4j-core/2.0-beta9/log4j-core-2.0-beta9.jar"/>
-	<classpathentry kind="lib" path="libraries/org/lwjgl/lwjgl/lwjgl/2.9.0/lwjgl-2.9.0.jar"/>
-	<classpathentry kind="lib" path="libraries/org/lwjgl/lwjgl/lwjgl_util/2.9.0/lwjgl_util-2.9.0.jar"/>
-	<classpathentry kind="lib" path="libraries/org/lwjgl/lwjgl/lwjgl-platform/2.9.0/lwjgl-platform-2.9.0-natives-linux.jar"/>
+	<classpathentry kind="lib" path="libraries/org/lwjgl/lwjgl/lwjgl/2.9.1/lwjgl-2.9.1.jar"/>
+	<classpathentry kind="lib" path="libraries/org/lwjgl/lwjgl/lwjgl_util/2.9.1/lwjgl_util-2.9.1.jar"/>
+	<classpathentry kind="lib" path="libraries/org/lwjgl/lwjgl/lwjgl-platform/2.9.1/lwjgl-platform-2.9.1-natives-linux.jar"/>
 	<classpathentry kind="lib" path="libraries/net/java/jinput/jinput-platform/2.0.5/jinput-platform-2.0.5-natives-linux.jar"/>
 	<classpathentry kind="lib" path="lib/argo-3.7.jar"/>
+    <classpathentry kind="lib" path="lib/asm-debug-all-4.1.jar"/>
 	<classpathentry kind="lib" path="lib/Minecraft-server-versioned.jar"/>
 	<classpathentry kind="lib" path="lib/Minecraft-versioned.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="libraries/org/ow2/asm/asm-all/4.1/asm-all-4.1.jar"/>
 	<classpathentry kind="lib" path="libraries/tv/twitch/twitch/5.16/twitch-5.16.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
