--- a/raw/.classpath
+++ b/raw/.classpath
@@ -3,6 +3,11 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+    <classpathentry kind="lib" path="libraries/com/mojang/realms/1.3.3/realms-1.3.3.jar"/>
+    <classpathentry kind="lib" path="libraries/org/apache/commons/commons-compress/1.8.1/commons-compress-1.8.1.jar"/>
+    <classpathentry kind="lib" path="libraries/org/apache/httpcomponents/httpclient/4.3.3/httpclient-4.3.3.jar"/>
+    <classpathentry kind="lib" path="libraries/commons-logging/commons-logging/1.1.3/commons-logging-1.1.3.jar"/>
+    <classpathentry kind="lib" path="libraries/org/apache/httpcomponents/httpcore/4.3.2/httpcore-4.3.2.jar"/>	
 	<classpathentry kind="lib" path="libraries/java3d/vecmath/1.3.1/vecmath-1.3.1.jar"/>
 	<classpathentry kind="lib" path="libraries/net/sf/trove4j/trove4j/3.0.3/trove4j-3.0.3.jar"/>
 	<classpathentry kind="lib" path="libraries/com/ibm/icu/icu4j-core-mojang/51.2/icu4j-core-mojang-51.2.jar"/>
