--- a/raw/.classpath
+++ b/raw/.classpath
@@ -2,40 +2,43 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-    <classpathentry kind="lib" path="libraries/com/mojang/realms/1.3.3/realms-1.3.3.jar"/>
-    <classpathentry kind="lib" path="libraries/org/apache/commons/commons-compress/1.8.1/commons-compress-1.8.1.jar"/>
-    <classpathentry kind="lib" path="libraries/org/apache/httpcomponents/httpclient/4.3.3/httpclient-4.3.3.jar"/>
-    <classpathentry kind="lib" path="libraries/commons-logging/commons-logging/1.1.3/commons-logging-1.1.3.jar"/>
-    <classpathentry kind="lib" path="libraries/org/apache/httpcomponents/httpcore/4.3.2/httpcore-4.3.2.jar"/>	
-	<classpathentry kind="lib" path="libraries/java3d/vecmath/1.3.1/vecmath-1.3.1.jar"/>
-	<classpathentry kind="lib" path="libraries/net/sf/trove4j/trove4j/3.0.3/trove4j-3.0.3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>	
+    <classpathentry kind="lib" path="libraries/java3d/vecmath/1.5.2/vecmath-1.5.2.jar"/>
+    <classpathentry kind="lib" path="libraries/net/sf/trove4j/trove4j/3.0.3/trove4j-3.0.3.jar"/>
 	<classpathentry kind="lib" path="libraries/com/ibm/icu/icu4j-core-mojang/51.2/icu4j-core-mojang-51.2.jar"/>
-	<classpathentry kind="lib" path="libraries/net/sf/jopt-simple/jopt-simple/4.5/jopt-simple-4.5.jar"/>
+    <classpathentry kind="lib" path="libraries/net/sf/jopt-simple/jopt-simple/4.6/jopt-simple-4.6.jar"/>
 	<classpathentry kind="lib" path="libraries/com/paulscode/codecjorbis/20101023/codecjorbis-20101023.jar"/>
 	<classpathentry kind="lib" path="libraries/com/paulscode/codecwav/20101023/codecwav-20101023.jar"/>
 	<classpathentry kind="lib" path="libraries/com/paulscode/libraryjavasound/20101123/libraryjavasound-20101123.jar"/>
 	<classpathentry kind="lib" path="libraries/com/paulscode/librarylwjglopenal/20100824/librarylwjglopenal-20100824.jar"/>
 	<classpathentry kind="lib" path="libraries/com/paulscode/soundsystem/20120107/soundsystem-20120107.jar"/>
-	<classpathentry kind="lib" path="libraries/io/netty/netty-all/4.0.10.Final/netty-all-4.0.10.Final.jar"/>
-	<classpathentry kind="lib" path="libraries/com/google/guava/guava/15.0/guava-15.0.jar"/>
-	<classpathentry kind="lib" path="libraries/org/apache/commons/commons-lang3/3.1/commons-lang3-3.1.jar"/>
+    <classpathentry kind="lib" path="libraries/io/netty/netty-all/4.0.15.Final/netty-all-4.0.15.Final.jar"/>
+    <classpathentry kind="lib" path="libraries/com/google/guava/guava/17.0/guava-17.0.jar"/>
+    <classpathentry kind="lib" path="libraries/org/apache/commons/commons-lang3/3.3.2/commons-lang3-3.3.2.jar"/>
 	<classpathentry kind="lib" path="libraries/commons-io/commons-io/2.4/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="libraries/commons-codec/commons-codec/1.9/commons-codec-1.9.jar"/>
 	<classpathentry kind="lib" path="libraries/net/java/jinput/jinput/2.0.5/jinput-2.0.5.jar"/>
 	<classpathentry kind="lib" path="libraries/net/java/jutils/jutils/1.0.0/jutils-1.0.0.jar"/>
 	<classpathentry kind="lib" path="libraries/com/google/code/gson/gson/2.2.4/gson-2.2.4.jar"/>
-	<classpathentry kind="lib" path="libraries/com/mojang/authlib/1.5.12/authlib-1.5.12.jar"/>
+    <classpathentry kind="lib" path="libraries/com/mojang/authlib/1.5.17/authlib-1.5.17.jar"/>
+    <classpathentry kind="lib" path="libraries/com/mojang/realms/1.5.4/realms-1.5.4.jar"/>
+    <classpathentry kind="lib" path="libraries/org/apache/commons/commons-compress/1.8.1/commons-compress-1.8.1.jar"/>
+    <classpathentry kind="lib" path="libraries/org/apache/httpcomponents/httpclient/4.3.3/httpclient-4.3.3.jar"/>
+    <classpathentry kind="lib" path="libraries/commons-logging/commons-logging/1.1.3/commons-logging-1.1.3.jar"/>
+    <classpathentry kind="lib" path="libraries/org/apache/httpcomponents/httpcore/4.3.2/httpcore-4.3.2.jar"/>
 	<classpathentry kind="lib" path="libraries/org/apache/logging/log4j/log4j-api/2.0-beta9/log4j-api-2.0-beta9.jar"/>
 	<classpathentry kind="lib" path="libraries/org/apache/logging/log4j/log4j-core/2.0-beta9/log4j-core-2.0-beta9.jar"/>
 	<classpathentry kind="lib" path="libraries/org/lwjgl/lwjgl/lwjgl/2.9.1/lwjgl-2.9.1.jar"/>
 	<classpathentry kind="lib" path="libraries/org/lwjgl/lwjgl/lwjgl_util/2.9.1/lwjgl_util-2.9.1.jar"/>
 	<classpathentry kind="lib" path="libraries/org/lwjgl/lwjgl/lwjgl-platform/2.9.1/lwjgl-platform-2.9.1-natives-linux.jar"/>
 	<classpathentry kind="lib" path="libraries/net/java/jinput/jinput-platform/2.0.5/jinput-platform-2.0.5-natives-linux.jar"/>
+    <classpathentry kind="lib" path="libraries/tv/twitch/twitch/6.5/twitch-6.5.jar"/>
+    <!-- <classpathentry kind="lib" path="libraries/tv/twitch/twitch-platform/6.5/twitch-platform-6.5-natives-linux.jar"/> -->
+    <!-- <classpathentry kind="lib" path="libraries/tv/twitch/twitch-external-platform/4.5/twitch-external-platform-4.5-natives-linux.jar"/> -->
 	<classpathentry kind="lib" path="lib/argo-3.7.jar"/>
     <classpathentry kind="lib" path="lib/asm-debug-all-4.1.jar"/>
 	<classpathentry kind="lib" path="lib/Minecraft-server-versioned.jar"/>
 	<classpathentry kind="lib" path="lib/Minecraft-versioned.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="libraries/tv/twitch/twitch/5.16/twitch-5.16.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
